fixed mobile view of webpages. Started adding a page for favorite books. Not yet complete. Should look fine on mobile now.

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -54,3 +54,7 @@
     color: inherit !important;
 }
 
+.noLeftPadding {
+    padding-left:0px !important;
+}
+
